--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,12 @@
 }
 
 .kitten-image {
-    height: 560px;
+    height: 700px;
     background-size: cover;
     background-position: center;
 }
 
 section {
-    background-image: url("../assets/img/sunny-day.jpg");
     padding-top: 250px;
 }
 
@@ -25,6 +24,7 @@ img {
     max-width: 100%;
     display: block;
     margin: auto;
+    margin-top: 2.4em;
 }
 
 .kitten-small-image {
@@ -46,7 +46,7 @@ img {
 
 /* media querie */
 
-@media only screen and (min-width :80px) {
+@media only screen and (min-width :480px) {
     .column-xs-12 {
         width: 100%;
     }
